--- a/Blog/_config.yml
+++ b/Blog/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Maroio
+title: Maroio's  BLOG
 subtitle: ''
 description: ''
 keywords:
 author: Maroio  Ding
-language: en
-timezone: ''
+language: zh-CN
+timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
