Edit friend info

--- a/Blog/source/_data/link.yml
+++ b/Blog/source/_data/link.yml
@@ -5,13 +5,13 @@ class_friend:
             name: Rcxxx
             link: https://sinnammanyo.cn/
             avatar: https://raw.githubusercontent.com/rcxxx/my-img/main/img/lzumi-icon-06.jpg
-            descr: 
+            descr: 爱好文言文的算法工程狮
 
         2: 
             name: Bobi
             link: https://bobi.site
             avatar: https://bobi.site/wp-content/uploads/2020/02/bobi透明.png
-            descr: 
+            descr: 喜欢大可乐的硬件工程狮
 
         3: 
             name: Power Lin
