Edit 'My friends' page

--- a/Blog/source/_data/link.yml
+++ b/Blog/source/_data/link.yml
@@ -17,8 +17,8 @@ class_friend:
             name: Power Lin
             link: https://wiki-power.com
             avatar: https://wiki-media-1253965369.cos.ap-guangzhou.myqcloud.com/img/20201122195819.png
-            descr: 
-
+            descr: 很酷的硬件工程狮
+  
         4: 
             name: 口无
             link: https://anshinintakaha.github.io/
