--- a/Blog/_config.butterfly.yml
+++ b/Blog/_config.butterfly.yml
@@ -132,7 +132,7 @@ error_img:
 error_404:
   enable: false
   subtitle: 'Page Not Found'
-  background: https://raw.githubusercontent.com/Maroio-Ding/My_ImgBed/main/Material/404/52487.jpg
+  background: https://raw.githubusercontent.com/Maroio-Ding/My_ImgBed/main/Material/404/aKOcLiyPl2JQdFD.png
 
 post_meta:
   page: # Home Page
