--- a/Blog/_config.butterfly.yml
+++ b/Blog/_config.butterfly.yml
@@ -15,7 +15,7 @@ menu:
   #   - Music || /music/ || fas fa-music
   #   - Movie || /movies/ || fas fa-video
   Link: /link/ || fas fa-link
-  About: /about/ || fas fa-heart
+  # About: /about/ || fas fa-heart
 
 # Hide the child menu items in mobile sidebar
 hide_sidebar_menu_child: false
