--- a/Blog/_config.yml
+++ b/Blog/_config.yml
@@ -13,8 +13,8 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://maroiomars.cn
-root: /
+url: http://maroio-ding.github.io
+root: /Blog
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
